Use updated ConditionParameters and FilterIds